# pylint-blocking-calls

./: .gitignore  LICENSE  README.md  find_blocking_calls.py  plugins.py  pyproject.toml  requirements.txt  utils.py
src/pylint_blocking_calls/: __init__.py  blocking_calls.py  checker.py  helpers.py  settings.py
tests/: test_blocking_calls.py  test_checker.py
