[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 60
include_trailing_comma = true

[tool.poetry]
name = "pylint-blocking-calls"
version = "0.1.0"
description = "Pylint plugin to detect blocking calls in async functions"
authors = ["Aleksei Marashov <marashov-aleksey@yandex.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Edge-Center/pylint-blocking-calls"

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^3.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^6.0.0"

[tool.pylint.master]
load-plugins = "pylint_blocking_calls"
